@@ -1,3 +1,6 @@
+tag-0.3-20210816 JP
+  - More flexible datetime_centralize() and datetime_standardize() functions
+
 tag-0.3-20210811 JP
   - Apply datetime_standardize to some EntityJSON dates to force them to have a timezone
     Defaults to Central for UIUC
